fix few issues with the frontend and backend, ownerlist functional, using tomcat server