@@ -6,22 +6,37 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
 
     @Bean
     public CorsFilter corsFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*")); // Allow all origins (Change in production)
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*")); // Allow all headers
+        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        final CorsConfiguration config = new CorsConfiguration();
+        
+        // Allow all origins with pattern
+        config.setAllowedOriginPatterns(Collections.singletonList("*"));
+        
+        // Allow all headers
+        config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization", 
+                                              "Access-Control-Allow-Origin", "Access-Control-Request-Method",
+                                              "Access-Control-Request-Headers", "X-Requested-With"));
+        
+        // Allow all methods
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+        
+        // Allow credentials
         config.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Apply to all endpoints
-
+        
+        // How long the response to preflight requests can be cached
+        config.setMaxAge(3600L);
+        
+        // Apply to all paths
+        source.registerCorsConfiguration("/**", config);
+        
         return new CorsFilter(source);
     }
 }
